--- a/ts/package.json
+++ b/ts/package.json
@@ -5,5 +5,8 @@
     "serverless-plugin-typescript": "^2.1.2",
     "typescript": "^4.7.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@project-serum/anchor": "0.24.2",
+    "axios": "^0.27.2"
+  }
 }
